# algo-rabin-karp-string-search

./: .gitignore  PROJECT_STRUCTURE.en.md  PROJECT_STRUCTURE.md  README.en.md  README.md  USAGE.en.md  USAGE.md  pyproject.toml  requirements.txt
examples/: 00_intuition.py  01_polynomial_hash.py  02_search.py  03_rolling_collisions.py  04_complexity.py  05_code_walkthrough.py  06_full_walkthrough.py  _common.py  _searches.py
rabin_karp_string_search/: __init__.py  animation.py  core.py  i18n.py  style.py  visualization.py  walkthrough.py
tests/: test_core.py  test_smoke.py
